Fixing failing tests